syntax="proto3";

option java_multiple_files=true;
option java_package= "com.sdj3.dataServerSDJ3.protobuf.station2Protobuf";

message PartMessage {

  int32 id=1;
  string name = 2;
  double weight=3;
  int32 animalId=4;
  int32 trayId =5;
}
message AddPartMessage {

  string name = 2;
  double weight=3;
  int32 animalId=4;
  int32 trayId =5;
}
message CreateTrayMessage{
  string  name = 1;
  int32 maxWeight = 2;
}
message ReturnMessage{
  string message = 1;
}
message ReturnTrayMessage{
  int32 id =1;
  string  name = 2;
  int32 maxWeight = 3;
}

service Station2Service{
  rpc creatPart(AddPartMessage)returns(PartMessage);
  rpc createTray(CreateTrayMessage) returns(ReturnMessage);
}

